# ros2_robotic_arm_cubemars

./: .gitignore  README.md
src/arm6dof/: CMakeLists.txt  arm6dof_plugin.xml  arm_panel_plugin.xml  package.xml
src/arm6dof/launch/: main.launch.py
src/arm6dof/msg/: MITFeedback.msg  MITFeedbackArray.msg
src/arm6dof/src/arm/: ArmController.cpp  ArmController.hpp  ArmHardwareInterface.cpp  ArmHardwareInterface.hpp  CanBridge.cpp  CanBridge.hpp  armnode.cpp  ros2_projekt.code-workspace
src/arm6dof/src/rviz/: ArmControlPanel.cpp  ArmControlPanel.hpp
src/arm6dof/urdf/: arm6dof.urdf
src/arm6dof/urdf/meshes/: Bez-nazwy-v1_jedziemy_dalej_V2_silnik_ak_45_36-v1-v1.stl  Silnik_ak45-36-v1.stl  jedziemy_dalej_V2_3_przegub-v1_Sprzeglo_ak45-36-v12-v1-v1.stl  jedziemy_dalej_V2_Komponent98-Kopiuj-v1.stl  jedziemy_dalej_V2_Komponent98-v1.stl  jedziemy_dalej_V2_Obrót-pózniej-v5-v1.stl  jedziemy_dalej_V2_Obudowa_podstawa-v11-v1.stl  jedziemy_dalej_V2_Przegub_2_ucho_bez_kabla-v7-v1.stl  jedziemy_dalej_V2_silnik_ak45-10-Kopiuj-v1.stl  jedziemy_dalej_V2_silnik_ak45-10-v1.stl  silnik60-v1.stl  wyjscie_podstawa-v1.stl
tools/: trajectory.py  waypoint_runner.py
